Legger til v1 av SAF-klient